@@ -1,5 +1,5 @@
 #ifndef _PyMOL_VERSION
-#define _PyMOL_VERSION "1.7.1.0"
+#define _PyMOL_VERSION "1.7.1.1"
 #endif
 
 #ifndef _PYMOL_1_x
@@ -7,12 +7,12 @@
 #endif
 
 #ifndef _PyMOL_VERSION_double
-#define _PyMOL_VERSION_double 1.710
+#define _PyMOL_VERSION_double 1.711
 #endif
 
 
 /* for session file compatibility */
 
 #ifndef _PyMOL_VERSION_int
-#define _PyMOL_VERSION_int 1710
+#define _PyMOL_VERSION_int 1711
 #endif
