@@ -183,7 +183,7 @@ int SelectorResidueVLAsTo3DMatchScores(PyMOLGlobals * G, CMatch * match,
                                        float radius, float scale,
                                        float base, float coord_wt, float rms_exp);
 
-PyObject *SelectorAssignAtomTypes(PyMOLGlobals * G, int sele, int state, int quiet, int format);
+int SelectorAssignAtomTypes(PyMOLGlobals * G, int sele, int state, int quiet, int format);
 
 
 /* reserve special meaning for tags 1-15 and note that 0 is disallowed */
